fix path to fonts in fonts.less
closes #63

--- a/less/fonts.less
+++ b/less/fonts.less
@@ -45,8 +45,8 @@
   font-family: var(--font-family);
   src:
     local('Fira Sans Light'),
-    url('@{path}/fonts/FiraSans-Light.woff2') format('woff2'),
-    url('@{path}/fonts/FiraSans-Light.woff') format('woff');
+    url('@{path}/FiraSans-Light.woff2') format('woff2'),
+    url('@{path}/FiraSans-Light.woff') format('woff');
   font-display: var(--font-display);
   font-style: normal;
   font-weight: 300;
@@ -64,8 +64,8 @@
   font-family: var(--font-family);
   src:
     local('Fira Sans Light Italic'),
-    url('@{path}/fonts/FiraSans-LightItalic.woff2') format('woff2'),
-    url('@{path}/fonts/FiraSans-LightItalic.woff') format('woff');
+    url('@{path}/FiraSans-LightItalic.woff2') format('woff2'),
+    url('@{path}/FiraSans-LightItalic.woff') format('woff');
   font-display: var(--font-display);
   font-style: italic;
   font-weight: 300;
@@ -83,8 +83,8 @@
   font-family: var(--font-family);
   src:
     local('Fira Sans Regular'),
-    url('@{path}/fonts/FiraSans-Regular.woff2') format('woff2'),
-    url('@{path}/fonts/FiraSans-Regular.woff') format('woff');
+    url('@{path}/FiraSans-Regular.woff2') format('woff2'),
+    url('@{path}/FiraSans-Regular.woff') format('woff');
   font-display: var(--font-display);
   font-style: normal;
   font-weight: 400;
@@ -102,8 +102,8 @@
   font-family: var(--font-family);
   src:
     local('Fira Sans Regular Italic'),
-    url('@{path}/fonts/FiraSans-RegularItalic.woff2') format('woff2'),
-    url('@{path}/fonts/FiraSans-RegularItalic.woff') format('woff');
+    url('@{path}/FiraSans-RegularItalic.woff2') format('woff2'),
+    url('@{path}/FiraSans-RegularItalic.woff') format('woff');
   font-display: var(--font-display);
   font-style: italic;
   font-weight: 400;
@@ -121,8 +121,8 @@
   font-family: var(--font-family);
   src:
     local('Fira Sans Medium'),
-    url('@{path}/fonts/FiraSans-Medium.woff2') format('woff2'),
-    url('@{path}/fonts/FiraSans-Medium.woff') format('woff');
+    url('@{path}/FiraSans-Medium.woff2') format('woff2'),
+    url('@{path}/FiraSans-Medium.woff') format('woff');
   font-display: var(--font-display);
   font-style: normal;
   font-weight: 500;
@@ -140,8 +140,8 @@
   font-family: var(--font-family);
   src:
     local('Fira Sans Medium Italic'),
-    url('@{path}/fonts/FiraSans-MediumItalic.woff2') format('woff2'),
-    url('@{path}/fonts/FiraSans-MediumItalic.woff') format('woff');
+    url('@{path}/FiraSans-MediumItalic.woff2') format('woff2'),
+    url('@{path}/FiraSans-MediumItalic.woff') format('woff');
   font-display: var(--font-display);
   font-style: italic;
   font-weight: 500;
@@ -206,8 +206,8 @@
   font-family: var(--font-family-mono);
   src:
     local('Fira Mono Regular'),
-    url('@{path}/fonts/FiraMono-Regular.woff2') format('woff2'),
-    url('@{path}/fonts/FiraMono-Regular.woff') format('woff');
+    url('@{path}/FiraMono-Regular.woff2') format('woff2'),
+    url('@{path}/FiraMono-Regular.woff') format('woff');
   font-display: var(--font-display);
   font-style: normal;
   font-weight: 400;
@@ -225,8 +225,8 @@
   font-family: var(--font-family-mono);
   src:
     local('Fira Mono Bold'),
-    url('@{path}/fonts/FiraMono-Bold.woff2') format('woff2'),
-    url('@{path}/fonts/FiraMono-Bold.woff') format('woff');
+    url('@{path}/FiraMono-Bold.woff2') format('woff2'),
+    url('@{path}/FiraMono-Bold.woff') format('woff');
   font-display: var(--font-display);
   font-style: normal;
   font-weight: 600;
@@ -253,8 +253,8 @@
   font-family: var(--font-family-unicode);
   src:
     local('Gentium Plus Regular'),
-    url('@{path}/fonts/GentiumPlus-R.woff2') format('woff2'),
-    url('@{path}/fonts/GentiumPlus-R.woff') format('woff');
+    url('@{path}/GentiumPlus-R.woff2') format('woff2'),
+    url('@{path}/GentiumPlus-R.woff') format('woff');
   font-display: var(--font-display-critical);
   font-style: normal;
   font-weight: 400;
@@ -272,8 +272,8 @@
   font-family: var(--font-family-unicode);
   src:
     local('Gentium Plus Italic'),
-    url('@{path}/fonts/GentiumPlus-I.woff2') format('woff2'),
-    url('@{path}/fonts/GentiumPlus-I.woff') format('woff');
+    url('@{path}/GentiumPlus-I.woff2') format('woff2'),
+    url('@{path}/GentiumPlus-I.woff') format('woff');
   font-display: var(--font-display-critical);
   font-style: italic;
   font-weight: 400;
