--- a/css/fonts.css
+++ b/css/fonts.css
@@ -10,42 +10,42 @@
 }
 @font-face {
   font-family: var(--font-family);
-  src: local('Fira Sans Light'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-Light.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-Light.woff') format('woff');
+  src: local('Fira Sans Light'), url('https://digitallinguistics.blob.core.windows.net/fonts/FiraSans-Light.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/FiraSans-Light.woff') format('woff');
   font-display: var(--font-display);
   font-style: normal;
   font-weight: 300;
 }
 @font-face {
   font-family: var(--font-family);
-  src: local('Fira Sans Light Italic'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-LightItalic.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-LightItalic.woff') format('woff');
+  src: local('Fira Sans Light Italic'), url('https://digitallinguistics.blob.core.windows.net/fonts/FiraSans-LightItalic.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/FiraSans-LightItalic.woff') format('woff');
   font-display: var(--font-display);
   font-style: italic;
   font-weight: 300;
 }
 @font-face {
   font-family: var(--font-family);
-  src: local('Fira Sans Regular'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-Regular.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-Regular.woff') format('woff');
+  src: local('Fira Sans Regular'), url('https://digitallinguistics.blob.core.windows.net/fonts/FiraSans-Regular.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/FiraSans-Regular.woff') format('woff');
   font-display: var(--font-display);
   font-style: normal;
   font-weight: 400;
 }
 @font-face {
   font-family: var(--font-family);
-  src: local('Fira Sans Regular Italic'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-RegularItalic.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-RegularItalic.woff') format('woff');
+  src: local('Fira Sans Regular Italic'), url('https://digitallinguistics.blob.core.windows.net/fonts/FiraSans-RegularItalic.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/FiraSans-RegularItalic.woff') format('woff');
   font-display: var(--font-display);
   font-style: italic;
   font-weight: 400;
 }
 @font-face {
   font-family: var(--font-family);
-  src: local('Fira Sans Medium'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-Medium.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-Medium.woff') format('woff');
+  src: local('Fira Sans Medium'), url('https://digitallinguistics.blob.core.windows.net/fonts/FiraSans-Medium.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/FiraSans-Medium.woff') format('woff');
   font-display: var(--font-display);
   font-style: normal;
   font-weight: 500;
 }
 @font-face {
   font-family: var(--font-family);
-  src: local('Fira Sans Medium Italic'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-MediumItalic.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-MediumItalic.woff') format('woff');
+  src: local('Fira Sans Medium Italic'), url('https://digitallinguistics.blob.core.windows.net/fonts/FiraSans-MediumItalic.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/FiraSans-MediumItalic.woff') format('woff');
   font-display: var(--font-display);
   font-style: italic;
   font-weight: 500;
@@ -66,28 +66,28 @@
 }
 @font-face {
   font-family: var(--font-family-mono);
-  src: local('Fira Mono Regular'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraMono-Regular.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraMono-Regular.woff') format('woff');
+  src: local('Fira Mono Regular'), url('https://digitallinguistics.blob.core.windows.net/fonts/FiraMono-Regular.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/FiraMono-Regular.woff') format('woff');
   font-display: var(--font-display);
   font-style: normal;
   font-weight: 400;
 }
 @font-face {
   font-family: var(--font-family-mono);
-  src: local('Fira Mono Bold'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraMono-Bold.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraMono-Bold.woff') format('woff');
+  src: local('Fira Mono Bold'), url('https://digitallinguistics.blob.core.windows.net/fonts/FiraMono-Bold.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/FiraMono-Bold.woff') format('woff');
   font-display: var(--font-display);
   font-style: normal;
   font-weight: 600;
 }
 @font-face {
   font-family: var(--font-family-unicode);
-  src: local('Gentium Plus Regular'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/GentiumPlus-R.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/GentiumPlus-R.woff') format('woff');
+  src: local('Gentium Plus Regular'), url('https://digitallinguistics.blob.core.windows.net/fonts/GentiumPlus-R.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/GentiumPlus-R.woff') format('woff');
   font-display: var(--font-display-critical);
   font-style: normal;
   font-weight: 400;
 }
 @font-face {
   font-family: var(--font-family-unicode);
-  src: local('Gentium Plus Italic'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/GentiumPlus-I.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/GentiumPlus-I.woff') format('woff');
+  src: local('Gentium Plus Italic'), url('https://digitallinguistics.blob.core.windows.net/fonts/GentiumPlus-I.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/GentiumPlus-I.woff') format('woff');
   font-display: var(--font-display-critical);
   font-style: italic;
   font-weight: 400;
