fix path to FiraSans-Italic

--- a/less/fonts.less
+++ b/less/fonts.less
@@ -97,13 +97,13 @@
 //
 // Weight: 2
 //
-// Styleguide Typography.FiraSans.RegularItalic
+// Styleguide Typography.FiraSans.Italic
 @font-face {
   font-family: @font-family;
   src:
     local('Fira Sans Regular Italic'),
-    url('@{path}/FiraSans-RegularItalic.woff2') format('woff2'),
-    url('@{path}/FiraSans-RegularItalic.woff') format('woff');
+    url('@{path}/FiraSans-Italic.woff2') format('woff2'),
+    url('@{path}/FiraSans-Italic.woff') format('woff');
   font-display: var(--font-display);
   font-style: italic;
   font-weight: 400;
