remove extra backtick from colors.less
closes #65

--- a/less/fonts.less
+++ b/less/fonts.less
@@ -90,7 +90,7 @@
   font-weight: 400;
 }
 
-// Fira Sans Regular Italic
+// Fira Sans Italic
 //
 // Markup:
 // <p style="font-family: 'Fira Sans'; font-style: italic;"><strong>Fira Sans Regular Italic</strong> is used for italics.</p>
