height: auto for inputs

--- a/css/dlx.css
+++ b/css/dlx.css
@@ -636,6 +636,9 @@ tr {
   overflow-wrap: break-word;
   word-wrap: break-word;
 }
+.input {
+  height: auto;
+}
 .input[type=button] {
   --link-color: white;
   --link-color-visited: white;
@@ -1338,6 +1341,9 @@ fieldset legend {
   font-weight: var(--bold);
   overflow-wrap: break-word;
   word-wrap: break-word;
+}
+input {
+  height: auto;
 }
 input[type=button] {
   --link-color: white;
