--- a/docs/patterns.css
+++ b/docs/patterns.css
@@ -415,8 +415,19 @@
   overflow-wrap: break-word;
   word-wrap: break-word;
 }
-.input {
-  height: auto;
+.input[type=date],
+.input[type=datetime],
+.input[type=datetime-local],
+.input[type=email],
+.input[type=month],
+.input[type=number],
+.input[type=password],
+.input[type=search],
+.input[type=tel],
+.input[type=text],
+.input[type=time],
+.input[type=week] {
+  min-height: 1.5em;
 }
 .input[type=button] {
   --link-color: white;
