align-items: center on file input
closes #68

--- a/less/forms.less
+++ b/less/forms.less
@@ -176,7 +176,9 @@
   // Markup: input-file.hbs
   //
   // Styleguide Elements.Forms.Inputs.file
-  &[type=file] {}
+  &[type=file] {
+    align-items: center;
+  }
 
   // Hidden Input
   //
