--- a/css/forms.css
+++ b/css/forms.css
@@ -198,6 +198,9 @@
   color: #CAD2D3;
   cursor: not-allowed;
 }
+.input[type=file] {
+  align-items: center;
+}
 .input[type=month] {
   --shadow-inset: inset var(--line-width) var(--line-width) 0.15em var(--shadow-color);
   background-color: transparent;
