--- a/docs/patterns.css
+++ b/docs/patterns.css
@@ -633,6 +633,9 @@
   color: #CAD2D3;
   cursor: not-allowed;
 }
+.input[type=file] {
+  align-items: center;
+}
 .input[type=month] {
   --shadow-inset: inset var(--line-width) var(--line-width) 0.15em var(--shadow-color);
   background-color: transparent;
@@ -1316,12 +1319,12 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 0;
   width: 100%;
 }
 .banner h1 {
   font-size: 2em;
   font-weight: 300;
+  margin: 0;
   min-width: 0;
   padding: var(--padding-text);
   overflow-wrap: break-word;
