--- a/less/colors.less
+++ b/less/colors.less
@@ -37,20 +37,25 @@
 
   // Gray
   //
-  // $codegray     - #FAFAFA; code gray
-  // $codedarkgray - #383A42; dark gray code
-  // $darkgray     - #808080; dark gray
-  // $gray         - #CCC; gray
-  // $lightgray    - #F5F2F0; light gray
+  // $codegray            - #FAFAFA; code gray
+  // $codedarkgray        - #383A42; dark gray code
+  // $darkgray            - #808080; dark gray
+  // $gray                - #CCC; gray
+  // $lightgray           - #F5F2F0; light gray
+  // $disabled-color      - #CAD2D3; font color for disabled inputs
+  // $disabled-background - #EAEDED; background color for disabled inputs
   //
   // Weight: 3
   //
   // Styleguide Colors.Gray
-  --codegray:     #FAFAFA;
-  --codedarkgray: #383A42;
-  --darkgray:     gray;
-  --gray:         #CCC;
-  --lightgray:    #F5F2F0;
+  --codegray:            #FAFAFA;
+  --codedarkgray:        #383A42;
+  --darkgray:            gray;
+  --gray:                #CCC;
+  --lightgray:           #F5F2F0;
+  --disabled-color:      #CAD2D3;
+  --disabled-background: #EAEDED;
+  --placeholder:         #757575;
 
   // Green
   //
