--- a/docs/patterns.css
+++ b/docs/patterns.css
@@ -101,6 +101,9 @@
   --darkgray: gray;
   --gray: #CCC;
   --lightgray: #F5F2F0;
+  --disabled-color: #CAD2D3;
+  --disabled-background: #EAEDED;
+  --placeholder: #757575;
   --verylightgreen: #7FFED1;
   --lightgreen: #4FFFC1;
   --green: #23FFB1;
@@ -428,6 +431,7 @@
 .input[type=time],
 .input[type=week] {
   min-height: 1.5em;
+  min-width: 5em;
 }
 .input[type=button] {
   --link-color: white;
@@ -493,8 +497,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=date]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=date]:focus {
@@ -509,8 +513,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=date]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=datetime] {
@@ -533,8 +537,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=datetime]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=datetime]:focus {
@@ -549,8 +553,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=datetime]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=datetime-local] {
@@ -573,8 +577,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=datetime-local]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=datetime-local]:focus {
@@ -589,8 +593,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=datetime-local]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=email] {
@@ -613,8 +617,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=email]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=email]:focus {
@@ -629,8 +633,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=email]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=file] {
@@ -656,8 +660,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=month]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=month]:focus {
@@ -672,8 +676,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=month]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=number] {
@@ -696,8 +700,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=number]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=number]:focus {
@@ -712,8 +716,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=number]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=password] {
@@ -736,8 +740,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=password]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=password]:focus {
@@ -752,8 +756,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=password]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=radio] {
@@ -821,8 +825,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=search]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=search]:focus {
@@ -837,8 +841,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=search]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=submit] {
@@ -897,8 +901,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=tel]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=tel]:focus {
@@ -913,8 +917,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=tel]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=text] {
@@ -937,8 +941,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=text]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=text]:focus {
@@ -953,8 +957,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=text]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=time] {
@@ -977,8 +981,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=time]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=time]:focus {
@@ -993,8 +997,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=time]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=url] {
@@ -1017,8 +1021,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=url]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=url]:focus {
@@ -1033,8 +1037,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=url]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=week] {
@@ -1057,8 +1061,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=week]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .input[type=week]:focus {
@@ -1073,8 +1077,8 @@
   --shadow-color: var(--darkred);
 }
 .input[type=week]:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .label {
@@ -1133,8 +1137,8 @@
   --shadow-color: var(--darkred);
 }
 .textarea:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .textarea:focus {
@@ -1149,8 +1153,8 @@
   --shadow-color: var(--darkred);
 }
 .textarea:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .h1 {
@@ -1366,8 +1370,8 @@
   --shadow-color: var(--darkred);
 }
 .field:disabled {
-  background-color: #EAEDED;
-  color: #CAD2D3;
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
   cursor: not-allowed;
 }
 .hanging {
@@ -1484,6 +1488,73 @@
   margin-left: 1.5em;
   padding: var(--padding-text);
   text-indent: -1.5em;
+}
+.textline {
+  align-items: baseline;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.textline h1,
+.textline h2,
+.textline h3,
+.textline h4,
+.textline h5,
+.textline h6,
+.textline span {
+  font-size: smaller;
+  font-weight: var(--bold);
+  min-width: 0;
+  overflow-wrap: break-word;
+  padding: var(--padding-text);
+  word-wrap: break-word;
+}
+.textline > div {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+}
+.textline input {
+  border: 0;
+  border-bottom: var(--border);
+  border-bottom-color: var(--gray);
+  box-shadow: unset;
+  cursor: text;
+  min-height: 1.5em;
+  outline: 0;
+  padding: var(--padding-text);
+}
+.textline input:disabled {
+  background-color: var(--disabled-background);
+  color: var(--disabled-color);
+  cursor: not-allowed;
+}
+.textline input:focus:not(:disabled) {
+  border-bottom-color: var(--blue);
+}
+.textline input:focus:not(:disabled):placeholder {
+  color: var(--blue);
+}
+.textline input:focus:not(:disabled) + p {
+  color: var(--blue);
+}
+.textline input:focus:not(:disabled) + p a {
+  font-weight: var(--bold);
+}
+.textline input:invalid:not(:disabled) {
+  border-bottom-color: var(--darkred);
+  color: var(--red);
+}
+.textline input:invalid:not(:disabled) + p {
+  color: var(--red);
+}
+.textline input + p {
+  color: var(--placeholder);
+  font-size: smaller;
+}
+.textline p {
+  margin: 0;
+  padding: var(--padding-text);
 }
 * {
   font: inherit;
