--- a/less/headings.less
+++ b/less/headings.less
@@ -15,6 +15,9 @@
 .h1 {
   align-self: center;
   font-size: 2.5em;
+  margin: 0;
+  min-width: 0;
+  padding: var(--padding-text);
   text-align: center;
 }
 
