--- a/less/colors.less
+++ b/less/colors.less
@@ -50,7 +50,7 @@
   // Styleguide Colors.Gray
   --codegray:            #FAFAFA;
   --codedarkgray:        #383A42;
-  --darkgray:            gray;
+  --darkgray:            #757575;
   --gray:                #CCC;
   --lightgray:           #F5F2F0;
   --disabled-color:      #CAD2D3;
