--- a/less/fonts.less
+++ b/less/fonts.less
@@ -6,7 +6,7 @@
 //
 // Styleguide Typography
 
-@path: 'https://digitallinguistics.blob.core.windows.net/fonts';
+@path: 'https://cdn.digitallinguistics.io/fonts';
 
 // Cannot use CSS variables for these - it breaks the @font-face declarations
 @font-family: 'Fira Sans';
