--- a/less/images.less
+++ b/less/images.less
@@ -305,6 +305,10 @@
 //
 // Styleguide Images.tools
 
+// tools.color.svg
+//
+// A colored tools icon, showing a screwdriver and wrench. Used for indicating tools in an application, when the black-and-white version (above) doesn't fit the styling.
+
 
 // tunnel.svg
 //
