--- a/less/inline.less
+++ b/less/inline.less
@@ -180,12 +180,12 @@
   .unicode;
 
   &::before {
-    content: '<';
+    content: '⟨';
     padding-right: var(--padding-ipa);
   }
 
   &::after  {
-    content: '>';
+    content: '⟩';
     padding-left: var(--padding-ipa);
   }
 
