--- a/less/variables.less
+++ b/less/variables.less
@@ -34,7 +34,7 @@
 
   // --border-radius
   //
-  // The value to use for the `border-radius` rule; This should generally not be changed.
+  // The value to use for the `border-radius` rule, set to 0.35em. This should generally not be changed.
   //
   // Styleguide Variables.border-radius
   --border-radius: 0.35em;
